--- a/index_style.css
+++ b/index_style.css
@@ -1,287 +1,109 @@
-*{
-  margin: 0;
+* {
   padding: 0;
-	box-sizing: border-box;
-}
-
-html,body{
-  min-width: 100%;
-  overflow-x: hidden;
-  font-size: 16px;
-  font-family: 'Montserrat', sans-serif;
-}
-
-header .navigation {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  min-height: 12vh;
-  min-width: 100%;
-  z-index: 10;
-  background: #171717;
-  border-bottom: 2px solid #0c2d48;
-}
-
-header .navigation .logo{
-  margin-left: 20px;
-}
-
-
-header .navigation .menu-list {
+  margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
   list-style: none;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 45%;
-  margin: auto 20px auto 0;
 }
-
-header .navigation .humbarger {
-  margin-right: 20px;
-  display: none;
- }
- 
-header .navigation .humbarger .bar{
-  width: 30px;
-  height: 2px;
-  margin: 7px;
-  background: #b1d4e0;
- }
-
-header .navigation .menu-list li a {
-  color: #b1d4e0;
-  font-size: 1.25rem;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  cursor: pointer;
-  transition: color 1s ease, border 1s ease;
-  text-decoration: none;
+:root {
+  --bg-color: #171717;
+  --text-color: #d8d8d8;
+  --main-color: #fb5050;
 }
-
-/* ====================
-  Intro Section
-=======================*/
-.intro-section {
-  height: 100vh;
-  position: relative;
-  background: rgba(15, 20, 35, 0.9);
+body {
+  min-height: 100vh;
+  background: var(--bg-color);
+  color: var(--text-color);
 }
-
-.intro-section .intro-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
+header {
+  position: fixed;
   width: 100%;
-  height: 100%;
-  left: 0;
   top: 0;
+  right: 0;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: transparent;
+  padding: 28px 12%;
+  transition: all 0.5s ease;
+}
+.logo {
+  display: flex;
+  align-items: center;
+}
+.logo img {
+  width: 100px;
+}
+.navbar {
+  display: flex;
+}
+.navbar a {
+  color: var(--text-color);
+  font-size: 16px;
+  line-height: 20px;
+  padding: 5px 0;
+  margin: 0 30px;
+  transition: all 0.5s ease;
+}
+.navbar a:hover {
+  color: var(--main-color);
+}
+.main {
+  display: flex;
+  align-items: center;
+}
+#menu-icon {
+  font-size: 35px;
+  color: var(--text-color);
+  cursor: pointer;
+  z-index: 10001;
+  display: none;
 }
 
-.intro-section .intro-content h1 {
-  color: #b1d4e0;
-  font-size: 5rem;
-  letter-spacing: -1px;
-  text-transform: uppercase;
-  margin-top: 80px;
-}
-
-.intro-section .intro-content h6{
-  margin-top: 5px;
-  color: #b1d4e0;
-  font-size: 2.5rem;
-  font-weight: 300;
-}
-
-.intro-section .intro-content p {
-  margin-top: 40px;
-  color: #b1d4e0;
-}
-
-.intro-content .tagline {
-  margin-top:80px;
-}
-
-.intro-section .intro-content .tagline .change-container{
-	position: relative;
-  display: inline-block;
-  width: 560px;
-  margin-bottom: 55px;
-	margin-top: 30px;
-}
-
-.intro-section .intro-content .changing {
-	position: absolute;
-	overflow: hidden;
-  width: 100%;
-  left:0;
-  bottom:0;
-  height:0;
-  opacity:0;
-  color: #b1d4e0;
-  text-transform: uppercase;
-  word-spacing: 5px;
-	text-align: center;
-	font-size: 2.5rem;
-}
-
-.changing:nth-child(1) {
-  animation: revealNextWord 6s cubic-bezier(0.57, 1.52, 0.9, 1.08) 1.5s infinite;
-}
-
-.changing:nth-child(2) {
-  animation: revealNextWord 6s cubic-bezier(0.57, 1.52, 0.9, 1.08) 3s infinite;
-}
-
-.changing:nth-child(3) {
-  animation: revealNextWord 6s cubic-bezier(0.57, 1.52, 0.9, 1.08) 4.5s infinite;
-}
-
-@keyframes revealNextWord {
-  0% { 
-    opacity: 0.3; 
-    height: 0.0; 
-  }
-  10% { 
-    opacity: 1; 
-    height:1.2em; 
-  }
-  20% { 
-    opacity: 1; 
-    height:1.2em; 
-  }
-  28% { 
-    opacity: 0; 
-    height:2em; 
-  }
-  
-}
-
-.intro-section .intro-content .header-btn a{
-  text-decoration: none;
-  font-size: 1.5rem;
-  color: #3498db;
-  background-color: #b1d4e0;
-  padding: 15px;
-  border-radius: 5px;
-  display: inline-block;
-  position: relative;
-  overflow: hidden;
-  text-transform: uppercase;
-}
-
-.intro-section .intro-content .header-btn a:before{
-	position: absolute;
-  content: ""; 
-  top: 0px;
-  height: 100%;
-  left: -25%;
-  width: 0%;
-  background-color: #3498db;
-  transform: skew(50deg);
-  transition-duration: 1s;
-  z-index: 1;
-}
-
-.intro-section .intro-content .header-btn a:hover{
-  color: #b1d4e0;
-}
-
-.intro-section .intro-content .header-btn a:hover:before{
-  width: 170%;
-
-}
-
-.intro-section .intro-content .header-btn a span{
-	position: relative;
-	z-index: 9;
-}
-
-/* ====================
-  Responsive Section
-=======================*/
-
-/* Tablet desktop :768px. */
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  header .navigation .menu-list {
-    width: 60%;
+@media (max-width: 1280px) {
+  header {
+    padding: 14px 2%;
+    transition: 0.2s ease;
   }
 
-  header .navigation .menu-list li a{
-    font-size: 1rem;
+  .navbar a {
+    padding: 5px 0;
+    margin: 0px 20px;
+  }
+}
+@media (max-width: 1090px) {
+  #menu-icon {
+    display: block;
   }
 
-}
-
-/* Large Mobile :480px. */
-
-@media only screen and (max-width: 767px) {
-
-  header .navigation .menu-list {
+  .navbar {
     position: absolute;
-    top: 12vh;
-    min-width: 100%;
-    background: rgba(15, 20, 35, 0.99);
-    text-align: center;
-    display: none;
+    top: 100%;
+    right: -100%;
+    width: 270px;
+    height: 28vh;
+    background: var(--main-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    border-radius: 10px;
+    transition: all 1s ease;
   }
 
-  header .navigation .menu-list li {
+  .navbar a {
     display: block;
+    margin: 12px 0px;
+    padding: 0px 25px;
+    transition: all 1s ease;
   }
 
-  header .navigation .menu-list li a {
-    display: block;
-    padding: 20px;
-    transition: color 1s ease, padding 1s ease, background-color 1s ease;
-
+  .navbar a:hover {
+    color: var(--text-color);
+    transform: translateY(5px);
   }
 
-  header .navigation .menu-list li a:hover{
-    color: #b1d4e0;
-    padding-left: 30px;
-    background: rgba(177, 212, 224, 0.2);
+  .open {
+    right: 2%;
   }
-
-
-  header .navigation .humbarger{
-    display: block;
-  }
-
-  .intro-section .intro-content h1 {
-    font-size: 2.8rem;
-  }
-
-  .intro-section .intro-content h6 {
-    font-size: 1.4rem;
-  }
-
-  .intro-section .intro-content .changing {
-    font-size: 1.5rem;
-  }
-
-  .intro-section .intro-content .header-btn a{
-    font-size: 1.25rem;
-  }
-
 }
-
-
-/* small mobile :320px. */
-
-@media only screen and (max-width: 479px) {
-
-  .intro-inner .intro-content h1 {
-    font-size: 2rem;
-    letter-spacing: 1px;
-  }
-
-  .intro-inner .intro-content p {
-    margin-top: 10px;
-  }
-
-}
-    
