--- a/index_style.css
+++ b/index_style.css
@@ -4,17 +4,24 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
+  font-family: sans-serif;
 }
 :root {
   --bg-color: #171717;
   --text-color: #d8d8d8;
-  --main-color: #fb5050;
+  --main-color: #1717179e;
+  --twitter: #1da1f2;
+  --insta: #cf2e92;
+  --facebook: #4267b2;
+  --youtube: #da1725;
 }
 body {
   min-height: 100vh;
   background: var(--bg-color);
   color: var(--text-color);
 }
+/*Navbar*/
+
 header {
   position: fixed;
   width: 100%;
@@ -24,9 +31,11 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: transparent;
+  background: var(--main-color);
   padding: 28px 12%;
   transition: all 0.5s ease;
+  border-bottom-right-radius: 25px;
+  border-bottom-left-radius: 25px;
 }
 .logo {
   display: flex;
@@ -61,6 +70,60 @@ header {
   display: none;
 }
 
+/*Slider Css*/
+
+.slider {
+  top: 20%;
+  overflow: hidden;
+}
+.slider figure img {
+  width: 20%;
+  float: left;
+}
+.slider figure {
+  position: relative;
+  width: 500%;
+  margin: 0;
+  left: 0;
+  text-align: left;
+  font-size: 0;
+  animation: 30s slidy infinite;
+}
+@keyframes slidy {
+  0% {
+    left: 0%;
+  }
+  20% {
+    left: 0%;
+  }
+  25% {
+    left: -100%;
+  }
+  45% {
+    left: -100%;
+  }
+  50% {
+    left: -200%;
+  }
+  70% {
+    left: -200%;
+  }
+  75% {
+    left: -300%;
+  }
+  95% {
+    left: -300%;
+  }
+  100% {
+    left: -400%;
+  }
+}
+
+/*About Us*/
+
+/*The Guild*/
+/*Contact*/
+/*Media Queries*/
 @media (max-width: 1280px) {
   header {
     padding: 14px 2%;
@@ -72,6 +135,7 @@ header {
     margin: 0px 20px;
   }
 }
+
 @media (max-width: 1090px) {
   #menu-icon {
     display: block;
